# MiniatureOs

./: .gdb_history  .gitignore  Cargo.toml  README.md  build.rs  disk_image.img  run.sh  tags  test_kernel_unittests.img  toolchain.toml
Bootloader/x86_64/common/: Cargo.toml
Bootloader/x86_64/common/src/: dap.rs  disk.rs  fat.rs  gdt.rs  lib.rs  mbr.rs  memory_map.rs  print.rs  vesa.rs
Bootloader/x86_64/mbr/: Cargo.toml  build.rs
Bootloader/x86_64/mbr/src/: boot.asm  dap.rs  main.rs  mbr.rs  util.rs
Bootloader/x86_64/stage2/: Cargo.toml  build.sh
Bootloader/x86_64/stage2/src/: main.rs  print.rs  protected_mode.rs  vesa.rs
Bootloader/x86_64/stage3/: Cargo.toml  build.sh
Bootloader/x86_64/stage3/src/: framebuffer.rs  main.rs  paging.rs  print.rs  uart.rs
Bootloader/x86_64/stage4/: Cargo.toml  build.sh
Bootloader/x86_64/stage4/src/: main.rs  print.rs
Bootloader/x86_64/util/src/: lib.rs
bootloader/: Cargo.toml  build.rs  run.sh
bootloader/api/: Cargo.toml
bootloader/api/src/: lib.rs
bootloader/build_helpers/: x86_64.rs
bootloader/src/: lib.rs  main.rs
bootloader/src/bios/: mod.rs
bootloader/x86_64/bios/common/: Cargo.toml
bootloader/x86_64/bios/common/src/: bump_frame_allocator.rs  lib.rs  mbr.rs  mutex.rs  realmode.rs  serial.rs
bootloader/x86_64/bios/mbr/: Cargo.toml  build.sh
bootloader/x86_64/bios/mbr/src/: boot.asm  dap.rs  main.rs
bootloader/x86_64/bios/stage2/: Cargo.toml  build.rs  stage2.ld
bootloader/x86_64/bios/stage2/src/: dap.rs  disk.rs  fat.rs  main.rs  memory_map.rs  print.rs  protected_mode.rs  vesa.rs
bootloader/x86_64/bios/stage3/: Cargo.toml  build.rs
bootloader/x86_64/bios/stage3/src/: main.rs  paging.rs  print.rs
bootloader/x86_64/bios/stage4/: Cargo.toml  build.rs  stage4.ld  x86-stage4.json
bootloader/x86_64/bios/stage4/src/: elf.rs  interrupts.rs  main.rs
bootloader_uefi/: Cargo.toml  run.sh
bootloader_uefi/.cargo/: config.toml
bootloader_uefi/src/: console.rs  uefi.rs
kernel/: Cargo.toml  build.sh  ideas.md  ideas_and_todos.md
kernel/src/: allocator.rs  error.rs  housekeeping_threads.rs  interrupts.rs  lib.rs  main.rs  paging.rs  print.rs  qemu.rs  serial.rs  vga.rs
kernel/src/allocator/: buddy_allocator.rs  stack_allocator.rs
kernel/src/interrupts/: mod.rs
kernel/src/interrupts/hardware/: pic8259.rs
kernel/src/memory/: address_space.rs  buddy_frame_allocator.rs  fixed_block_allocator.rs  manager.rs  mod.rs  region.rs  virtual_memory_object.rs
kernel/src/multitasking/: process.rs  scheduler.rs  thread.rs
kernel/src/time/: mod.rs  pit8254.rs
num_enum/: Cargo.toml
num_enum/src/: lib.rs
src/: lib.rs  main.rs
tests/: test.rs
tests/test_kernel_allocators/: Cargo.toml
tests/test_kernel_allocators/src/: main.rs
tests/test_kernel_multitasking/: Cargo.toml
tests/test_kernel_multitasking/src/: main.rs
tests/test_kernel_unittests/: Cargo.toml
tests/test_kernel_unittests/src/: main.rs
util/: Cargo.toml  todo.md
util/intrusive_linked_list/: Cargo.toml
util/intrusive_linked_list/src/: lib.rs
util/linked_list/src/: lib.rs
util/src/: hashmap.rs  intrusive_linked_list.rs  lib.rs  mpsc_queue.rs  mutex.rs  range_allocator.rs  ringbuffer.rs  rwlock.rs  semaphore.rs  volatile.rs
util/src/elf_loader/: elf.rs  elfbinary.rs  mod.rs
util/src/elf_loader/test/: Makefile  hello_world  test
x86_64/: Cargo.toml
x86_64/src/: frame_allocator.rs  gdt.rs  idt.rs  instructions.rs  interrupts.rs  lib.rs  memory.rs  mutex.rs  paging.rs  port.rs  print.rs  register.rs  serial.rs  tss.rs  uart.rs
x86_64/src/paging/: bump_frame_allocator.rs  linked_list_frame_allocator.rs  mapped_page_table.rs  mod.rs  offset_page_table.rs
