[package]
name = "MiniatureOs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow="*"
futures="*"
mbrman="*"
tempfile="*"
fatfs="*"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]

[workspace]
members = [
    "Kernel",
    "Bootloader/x86_64/mbr",
    "Bootloader/x86_64/stage2",
    "Bootloader/x86_64/common", "Bootloader/x86_64/stage3",
]

[profile.mbr]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[profile.stage2]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = true

[profile.stage3]
inherits = "release"
debug = true
overflow-checks = true
