[package]
name = "MiniatureOs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]

[build-dependencies]
bootloader={path="./bootloader"}
kernel = {path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = [
    "kernel",
    "bootloader",
    "bootloader/api",
    "bootloader/x86_64/bios/mbr",
    "bootloader/x86_64/bios/stage2",
    "bootloader/x86_64/bios/stage3",
    "bootloader/x86_64/bios/stage4",
    "x86_64",
]

[profile.mbr]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[profile.stage2]
inherits = "release"
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = true

[profile.stage3]
inherits = "release"
debug = true
overflow-checks = true

[profile.stage4]
inherits = "release"
debug = true
overflow-checks = true
