[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: change this to e.g. bios, uefi ...
common = {path="../bootloader/x86_64/bios/common"}
bootloader_api = {path="../bootloader/api"}

