[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: change this to e.g. bios, uefi ...
api = {path="../bootloader/api"}
x86_64 = {path="../x86_64"}
util = {path="../util", features = ["kernel"]}
bitflags = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]