[package]
name = "common_bios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "*"
bit_field = "*"
x86_64 = {path="../../../../x86_64"}
api = {path="../../../api"}
util = {path="../../../../util"}

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]