[package]
name = "stage4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
x86_64 = {path="../../../../x86_64"}

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]