[package]
name = "stage4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api= {path="../../../api"}
x86_64 = {path="../../../../x86_64"}
common = {package="common_bios", path="../common"}
util = {path="../../../../util/"}

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]
